--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой сайт</title>
+    <!-- ↓ Здесь добавляем мета-теги для Telegram ↓ -->
+    <meta property="og:title" content="Мой сайт">
+    <meta property="og:description" content="Описание для превью в Telegram">
+<!--     <meta property="og:image" content="URL_ВАШЕЙ_ПРЕВЬЮ_КАРТИНКИ"> -->
+    <meta property="og:url" content="https://ubercuber73777.github.io/Site_1">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#цвет_вашего_сайта">
+    <!-- ↑ Конец мета-тегов ↑ -->
     <style>
         body {
             font-family: Arial, sans-serif;
